--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,5 +1,23 @@
+// Font imports
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
+@import "./style/variables";
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+span,
+button {
+  color: $dark;
 }
