feat: add login and signup functionality

--- a/frontend/src/ui/InputGroup/inputGroup.scss
+++ b/frontend/src/ui/InputGroup/inputGroup.scss
@@ -12,4 +12,11 @@
     font-size: 1rem;
     color: $dark;
   }
+
+  .error {
+    font-family: "Montserrat", sans-serif;
+    line-height: 19.5px;
+    font-size: 1rem;
+    color: $error;
+  }
 }
