--- a/frontend/src/ui/Input/input.scss
+++ b/frontend/src/ui/Input/input.scss
@@ -9,10 +9,19 @@
   border: none;
   width: 100%;
   color: $dark;
-}
 
-.input::placeholder {
-  color: $dark;
-  opacity: 50%;
-  font-weight: 500;
+  &:focus {
+    outline: 1px solid $green;
+  }
+
+  &[aria-invalid="true"] {
+    background-color: $veryLightRed;
+    outline-color: $error;
+  }
+
+  &::placeholder {
+    color: $dark;
+    opacity: 50%;
+    font-weight: 500;
+  }
 }
