--- a/frontend/src/pages/Login/components/LoginForm/login-form.scss
+++ b/frontend/src/pages/Login/components/LoginForm/login-form.scss
@@ -6,6 +6,7 @@ form {
   gap: 1.5rem;
 
   .forgot-pass {
+    display: block;
     font-family: "Montserrat", sans-serif;
     font-size: 1.25rem;
     font-weight: 500;
