feat: add forgot password functionality

--- a/frontend/src/pages/ForgotPassword/components/ForgotPasswordForm/forgot-password-form.scss
+++ b/frontend/src/pages/ForgotPassword/components/ForgotPasswordForm/forgot-password-form.scss
@@ -1,9 +1,6 @@
-@import "../../../../style/variables";
-
-form {
+.forgot-password-form {
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
 
   .button-container {
     margin-top: 3rem;
