--- a/frontend/src/pages/ResetPassword/components/ResetPasswordForm/reset-password-form.scss
+++ b/frontend/src/pages/ResetPassword/components/ResetPasswordForm/reset-password-form.scss
@@ -1,6 +1,4 @@
-@import "../../../../style/variables";
-
-form {
+.reset-password-form {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
