feat: add get user hook

--- a/frontend/src/shared-components/GoogleSignupButton/google-signup-button.scss
+++ b/frontend/src/shared-components/GoogleSignupButton/google-signup-button.scss
@@ -1,4 +1,4 @@
-@import "../../../../style/variables";
+@import "../../style/variables";
 
 .signup-with-google {
   font-family: "Montserrat", sans-serif;
