--- a/frontend/src/style/_variables.scss
+++ b/frontend/src/style/_variables.scss
@@ -7,3 +7,8 @@ $gray: #f8f9fd;
 $green: #23c55e;
 $error: #f45156;
 $veryLightRed: #f4515610;
+$fountainWhite: #E8E8EA;
+
+
+//measurements
+$desktopHeight:1000px;
