Update on the homepage

--- a/frontend/src/style/_variables.scss
+++ b/frontend/src/style/_variables.scss
@@ -5,10 +5,12 @@
 $dark: #171d29;
 $gray: #f8f9fd;
 $green: #23c55e;
+$lightGreen:#bbedcd;
+$white: #ffffff;
 $error: #f45156;
 $veryLightRed: #f4515610;
 $fountainWhite: #E8E8EA;
 
 
 //measurements
-$desktopHeight:1000px;
+$desktopHeight:800px;
