--- a/frontend/src/pages/Home/home.scss
+++ b/frontend/src/pages/Home/home.scss
@@ -17,26 +17,16 @@
   font-weight: 600;
   font-size: 2.5rem;
 
-  .header_class {
-    display: flex;
-    position: sticky;
-    z-index: 1;
-    top: 1.5rem;
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-    width: 90%;
-    justify-content: space-between;
-
-  }
-
-  >.main_body {
+  > .main_body {
     background-color: $green;
-    background-image: linear-gradient(rgba(15, 23, 42, 0.5), rgba(15, 23, 42, 0.2)), url(../../assets/images/background.png);
+    background-image: linear-gradient(
+        rgba(15, 23, 42, 0.5),
+        rgba(15, 23, 42, 0.2)
+      ),
+      url(../../assets/images/background.png);
     background-position: center center;
     background-size: cover;
     height: $desktopHeight;
-    padding-top: 3rem;
 
     .slang {
       font-size: 50px;
@@ -45,7 +35,7 @@
       margin: 50px auto;
       margin-bottom: 10px;
 
-      &>div {
+      & > div {
         font-size: 50px;
       }
     }
@@ -61,9 +51,7 @@
       .white {
         color: $gray;
       }
-
     }
-
 
     .buttonWrapper {
       display: flex;
@@ -87,11 +75,11 @@
   .switchSection {
     width: 100%;
 
-    &>.toper {
+    & > .toper {
       width: 100%;
       margin-bottom: 20px;
 
-      &>img {
+      & > img {
         width: 100%;
       }
     }
@@ -107,7 +95,7 @@
       gap: 30px;
       margin-bottom: 30px;
 
-      &>.organizer,
+      & > .organizer,
       .guest {
         padding: 10px 30px;
         border-radius: 30px;
@@ -118,7 +106,7 @@
         color: $gray;
       }
 
-      &>:not(.active) {
+      & > :not(.active) {
         cursor: pointer;
       }
     }
@@ -131,16 +119,15 @@
         margin: 0 auto 20px;
       }
 
-      >.details {
+      > .details {
         width: 750px;
         margin: 0 auto 20px;
         font-weight: normal;
         font-size: 20px;
 
-        &>span {
+        & > span {
           font-family: "Sharpie";
         }
-
       }
 
       .organizerFormLayout {
@@ -162,7 +149,7 @@
           background-color: $white;
           z-index: 2;
 
-          &>img {
+          & > img {
             width: 250px;
             height: fit-content;
           }
@@ -188,22 +175,19 @@
           bottom: 0;
           right: 0;
         }
-
       }
     }
   }
 
-
-  .brandsTrusts{
-    width:80%;
+  .brandsTrusts {
+    width: 80%;
     margin: 50px auto;
-    &>p{
+    & > p {
       font-size: 40px;
     }
-    &>img{
+    & > img {
       margin-top: 30px;
       width: 100%;
     }
   }
-
 }
