--- a/frontend/src/ui/Header/header.scss
+++ b/frontend/src/ui/Header/header.scss
@@ -1,5 +1,16 @@
-.header{
-    display: flex;
-    width: 70%;
-    justify-content: space-between;
+@import "../../style/variables";
+
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 3rem 4rem;
+
+  .brand {
+    font-size: 2.5rem;
+    font-weight: 700;
+    font-family: "Sharpie", sans-serif;
+    color: $green;
+    text-decoration: none;
+  }
 }
