--- a/frontend/src/pages/Home/components/Album/albummain.scss
+++ b/frontend/src/pages/Home/components/Album/albummain.scss
@@ -1,6 +1,6 @@
 .mainAlbumContainer{
     display: flex;
     width: 90%;
-    margin: 0 auto;
+    margin: 0 auto 40px;
     justify-content: space-between;
 }
