footer almost done

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -4,6 +4,11 @@
   font-family: "Sharpie";
   src: url(./assets/fonts/Sharpie-Variable.ttf);
 }
+
+@font-face {
+  font-family: "Signika";
+  src: url(./assets/fonts/Signika.ttf);
+}
 @import "./style/variables";
 
 * {
