--- a/frontend/src/pages/Home/components/Footer/footer.scss
+++ b/frontend/src/pages/Home/components/Footer/footer.scss
@@ -2,6 +2,7 @@
 
 footer{
     width: 100%;
+    height: 400px;
     background-color: $dark;
     border-radius: 10px 10px 0 0;
     display: flex;
@@ -35,5 +36,12 @@ footer{
             }
             
         }
+    }
+
+    .social_links{
+        width: 90%;
+        margin: 0 auto;
+         border: 1px solid red;
+
     }
 }
