feat: build events page

--- a/frontend/src/style/_variables.scss
+++ b/frontend/src/style/_variables.scss
@@ -10,6 +10,7 @@ $white: #ffffff;
 $error: #f45156;
 $veryLightRed: #f4515610;
 $fountainWhite: #e8e8ea;
+$smoke: #b7b9bd;
 $blue: #454a54;
 
 //measurements
