--- a/frontend/src/ui/Header/header.scss
+++ b/frontend/src/ui/Header/header.scss
@@ -1,10 +1,11 @@
 @import "../../style/variables";
 
-.header-container {
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 3rem 4rem;
+  width: 100%;
 
   .brand {
     font-size: 2.5rem;
