--- a/frontend/src/pages/Home/components/Footer/footer.scss
+++ b/frontend/src/pages/Home/components/Footer/footer.scss
@@ -5,7 +5,7 @@ footer{
     height: 400px;
     background-color: $dark;
     border-radius: 10px 10px 0 0;
-    display: none;
+    display: flex;
     align-items: center;
     flex-direction: column;
 
