--- a/frontend/src/pages/Login/login.scss
+++ b/frontend/src/pages/Login/login.scss
@@ -42,11 +42,12 @@
     flex-direction: column;
     justify-content: center;
 
-    .header {
+    .login-header {
       display: flex;
       flex-direction: column;
       gap: 1rem;
       margin-bottom: 3rem;
+      text-align: left;
     }
 
     h1 {
