--- a/frontend/src/pages/Events/events.scss
+++ b/frontend/src/pages/Events/events.scss
@@ -5,83 +5,87 @@
     box-shadow: 0px 4px 6px 2px #0000001a;
   }
 
-  .events-list {
-    padding: 42px 64px;
-    display: flex;
-    align-items: center;
-    gap: 40px;
-  }
+  .event-main-content {
+    min-height: 100vh;
 
-  h1 {
-    font-family: "Montserrat", sans-serif;
-    font-size: 2.5rem;
-    font-weight: 600;
-  }
+    .events-list {
+      padding: 42px 64px;
+      display: flex;
+      align-items: center;
+      gap: 40px;
+    }
 
-  .section-header {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 32px;
-  }
+    h1 {
+      font-family: "Montserrat", sans-serif;
+      font-size: 2.5rem;
+      font-weight: 600;
+    }
 
-  .create-event-form-section {
-    padding: 40px 64px;
+    .section-header {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 32px;
+    }
 
-    button {
-      div {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 8px;
+    .create-event-form-section {
+      padding: 40px 64px;
 
-        span {
+      button {
+        div {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 8px;
+
+          span {
+            color: white;
+          }
+        }
+
+        .pen-icon {
           color: white;
         }
       }
+    }
 
-      .pen-icon {
-        color: white;
+    .create-template-section {
+      padding: 40px 64px;
+    }
+    .templates-section {
+      padding: 40px 64px;
+
+      .tabs-container {
+        display: flex;
+        gap: 24px;
+      }
+
+      .templates-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 24px;
+        margin-top: 56px;
       }
     }
-  }
 
-  .create-template-section {
-    padding: 40px 64px;
-  }
-  .templates-section {
-    padding: 40px 64px;
-
-    .tabs-container {
+    .view-more-button {
+      margin: 40px auto;
       display: flex;
-      gap: 24px;
-    }
+      align-items: center;
+      gap: 8px;
+      background: transparent;
 
-    .templates-container {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      gap: 24px;
-      margin-top: 56px;
-    }
-  }
+      span {
+        font-size: 1.25rem;
+        color: $green;
+        font-family: "Montserrat";
+        font-weight: 700;
+      }
 
-  .view-more-button {
-    margin: 40px auto;
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    background: transparent;
-
-    span {
-      font-size: 1.25rem;
-      color: $green;
-      font-family: "Montserrat";
-      font-weight: 700;
-    }
-
-    .right-arrow-icon {
-      color: $green;
+      .right-arrow-icon {
+        color: $green;
+      }
     }
   }
 }
