--- a/frontend/src/pages/RSVP/rsvp.scss
+++ b/frontend/src/pages/RSVP/rsvp.scss
@@ -1,6 +1,6 @@
 @import "../../style/variables";
 
-.rsvp-container {
+.rsvp-container, .tracker-container {
   .header-container {
     box-shadow: 0px 4px 6px 2px #0000001a;
   }
