--- a/frontend/src/ui/Header/header.scss
+++ b/frontend/src/ui/Header/header.scss
@@ -4,8 +4,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 3rem 4rem;
+  padding: 2rem 4rem;
   width: 100%;
+  box-shadow: 2px 2px 10px rgb(155, 151, 151);
 
   .brand {
     font-size: 2.5rem;
