--- a/frontend/src/pages/Events/components/CreateEventForm/create-event-form.scss
+++ b/frontend/src/pages/Events/components/CreateEventForm/create-event-form.scss
@@ -30,6 +30,56 @@
     }
   }
 
+  .gift-header {
+    font-family: "Montserrat", sans-serif;
+    font-size: 2.5rem;
+    font-weight: 600;
+    margin-top: 60px;
+    margin-bottom: 24px;
+  }
+  .add-gift-container {
+    position: relative;
+    width: 50%;
+
+    .add-gift-button {
+      background-color: transparent;
+      border: none;
+      position: absolute;
+      top: 50%;
+      right: 32px;
+      transform: translateY(-50%);
+      cursor: pointer;
+    }
+  }
+
+  .gifts-list {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+    margin-top: 16px;
+
+    .gift {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      border: 1px solid $smoke;
+      border-radius: 12px;
+      padding: 14px 20px;
+
+      span {
+        font-family: "Montserrat";
+        color: $smoke;
+        size: 1.25rem;
+        font-weight: 600;
+      }
+
+      .x-icon {
+        color: $smoke;
+        cursor: pointer;
+      }
+    }
+  }
+
   .button-container {
     margin-top: 48px;
     margin-inline: auto;
