feat: add tracker page

--- a/frontend/src/style/_variables.scss
+++ b/frontend/src/style/_variables.scss
@@ -12,6 +12,7 @@ $veryLightRed: #f4515610;
 $fountainWhite: #e8e8ea;
 $smoke: #b7b9bd;
 $blue: #454a54;
+$light-gray: #e9f9ef;
 
 //measurements
 $desktopHeight: 800px;
