--- a/frontend/src/shared-components/EventCard/event-card.scss
+++ b/frontend/src/shared-components/EventCard/event-card.scss
@@ -1,4 +1,4 @@
-@import "../../../../style/variables";
+@import "../../style/variables";
 
 .event-card {
   width: 150px;
@@ -7,6 +7,7 @@
   position: relative;
   overflow: hidden;
   border-radius: 50%;
+  text-decoration: none;
 
   .image-container {
     position: absolute;
@@ -32,7 +33,7 @@
       display: block;
       text-align: center;
       font-family: "Sharpie", sans-serif;
-      font-size: 14px;
+      font-size: 16px;
       font-weight: 500;
       color: white;
     }
