--- a/frontend/src/pages/Tracker/tracker.scss
+++ b/frontend/src/pages/Tracker/tracker.scss
@@ -14,6 +14,14 @@
   align-items: center;
   justify-content: center;
 }
+
+.not-selected {
+  display: block;
+  font-family: "Montserrat";
+  font-size: 2.5rem;
+  text-align: center;
+  padding: 64px;
+}
 .guestAttendance {
   width: 100%;
   margin: 0 auto !important;
