finished the homepage reponsiveness

--- a/frontend/src/pages/Home/components/Album/albumcard.scss
+++ b/frontend/src/pages/Home/components/Album/albumcard.scss
@@ -91,3 +91,17 @@
         width: 100%;
     }
 }
+
+@media (max-width:426px) {
+    .albumContainer{
+        .mask{
+            height: fit-content;
+            &>h2{
+                font-size: 30px;
+            }
+            &>p{
+                font-size: 14px;
+            }
+        }
+    }
+}
