--- a/frontend/src/ui/Button/button.scss
+++ b/frontend/src/ui/Button/button.scss
@@ -43,3 +43,18 @@
 .button-md {
   padding: 24px 40px;
 }
+
+
+@media (max-width:426px) {
+  .button{
+    font-size: .7rem;
+
+  }
+
+  .button-sm{
+    padding: 10px 24px;
+  }
+  .button-md{
+    padding: 20px 40px;
+  }
+}
