--- a/frontend/src/ui/Header/header.scss
+++ b/frontend/src/ui/Header/header.scss
@@ -7,9 +7,10 @@
   padding: 2rem 4rem;
   width: 100%;
   box-shadow: 2px 2px 10px rgb(155, 151, 151);
+  
 
   .brand {
-    font-size: 2.5rem;
+    font-size: 40px;
     font-weight: 700;
     font-family: "Sharpie", sans-serif;
     color: $green;
@@ -20,6 +21,7 @@
     display: flex;
     align-items: center;
     gap: 24px;
+    
 
     .bell-container {
       width: 70px;
@@ -50,4 +52,23 @@
       color: $green;
     }
   }
+}
+
+
+
+@media (max-width:426px) {
+.header{
+  padding: 1rem;
+  .brand{
+    font-size: 24px;
+  }
+  .user-container{
+    .profile-image{
+      font-size: 20px;
+      font-weight: 500;
+      width: 60px;
+    }
+  }
+ 
+}  
 }
