--- a/frontend/src/ui/Navbar/navbar.scss
+++ b/frontend/src/ui/Navbar/navbar.scss
@@ -3,13 +3,13 @@
 .navbar {
   background-color: $gray;
   border-radius: 60px;
-  padding: 20px 32px;
+  padding: 10px 30px;
   display: flex;
   align-items: center;
   gap: 24px;
 
   .link {
-    padding: 12px 16px;
+    padding: 10px 15px;
     font-family: "Montserrat";
     font-weight: 500;
     font-size: 1rem;
@@ -35,3 +35,94 @@
     }
   }
 }
+
+.desktop{
+  // border: 1px solid orange;
+  display: flex;
+  width: fit-content ;
+  align-items: center;
+  gap: 150px;
+  transition: all 2s ease;
+  
+}
+.menu{
+  position: absolute;
+  right: 10px;
+  width: 30px;
+  height: 30px;
+  display: none;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  transition-delay: .5s;
+  z-index: 10;
+  .lines{
+    transition: all .3s linear;
+    width: 100%;
+    height: 3px;
+    background-color: $gray;border-radius: 10px;
+    &:nth-child(2){
+      width:80%;
+      align-self: flex-start;
+    }
+  }
+ 
+}
+.active{
+  .lines{
+    transition: all .4s linear;
+    background-color: $green;
+    perspective: 2;
+    &:nth-child(1){
+      top:15px;
+      transform: rotate(45deg);
+    }
+    &:nth-child(2){
+      display: none;
+    }
+
+    &:nth-child(3){
+      top: 15px;
+      position: absolute;
+
+      transform: rotate(135deg);
+    }
+  }
+}
+
+@media (max-width:426px) {
+
+  .desktop{
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 1;
+    gap: 0;
+    background-color: $gray;
+    width: 200px;
+    padding-bottom: 30px;
+    border-radius:0px 0 0 10px;
+
+
+  }
+.navbar{
+    flex-direction: column;
+   
+    right: 0;
+    top: 0;
+    border-radius: 0;
+    .link{
+      font-size: .7rem;
+    }
+   
+  }
+  .menu{
+    display: flex;
+    z-index: 10;
+  }
+ 
+}
+
+
