Finished the reponsiveness

--- a/frontend/src/pages/Login/components/LoginForm/login-form.scss
+++ b/frontend/src/pages/Login/components/LoginForm/login-form.scss
@@ -21,3 +21,15 @@ form {
     align-self: center;
   }
 }
+
+
+@media(max-width:426px){
+  form{
+    .forgot-pass{
+      margin-top: 10px;
+      font-size: 1rem;
+    }
+
+    
+  }
+}
