--- a/frontend/src/ui/Button/button.scss
+++ b/frontend/src/ui/Button/button.scss
@@ -47,14 +47,14 @@
 
 @media (max-width:426px) {
   .button{
-    font-size: .7rem;
+    font-size: 1rem;
 
   }
 
   .button-sm{
-    padding: 10px 24px;
+    padding: 10px 20px;
   }
   .button-md{
-    padding: 20px 40px;
+    padding: 15px 20px;
   }
 }
