--- a/frontend/src/pages/ForgotPassword/forgot-password.scss
+++ b/frontend/src/pages/ForgotPassword/forgot-password.scss
@@ -62,6 +62,7 @@
       flex-direction: column;
       gap: 1rem;
       margin-bottom: 3rem;
+      box-shadow: none;
       h1 {
         font-family: "Montserrat", sans-serif;
         font-weight: 500;
@@ -96,4 +97,52 @@
       }
     }
   }
+}
+
+
+@media (max-width:426px) {
+  .forgot-password-container{
+    display: flex;
+flex-direction: column;
+&>div:first-child{
+  padding: 0;
+  .brand-container{
+    padding: 2rem;
+    border-radius: 0;
+    // height: 300px;
+
+    .slogan{
+      width: 200px;
+    }
+
+    .text{
+      span{
+        font-size: 1.4rem;
+        font-weight: 500;
+      }
+    }
+
+    .img-container{
+      img{
+        width: 150px;
+      }
+    }
+  }
+}
+
+&>div:last-child{
+  padding: 2rem;
+  .header{
+    h1{
+      font-size: 1.5rem ;
+    }
+    P{
+      font-size: 1rem;
+    }
+  }
+  .link-container{
+    font-size: 1rem;
+  }
+}
+}
 }
