--- a/frontend/src/ui/Navbar/navbar.scss
+++ b/frontend/src/ui/Navbar/navbar.scss
@@ -60,6 +60,7 @@
     transition: all .3s linear;
     width: 100%;
     height: 3px;
+    border: 1px solid $green;
     background-color: $gray;border-radius: 10px;
     &:nth-child(2){
       width:80%;
