--- a/frontend/src/pages/Events/components/CreateEventButton/create-event-button.scss
+++ b/frontend/src/pages/Events/components/CreateEventButton/create-event-button.scss
@@ -11,6 +11,7 @@
   align-items: center;
   background: transparent;
   border-radius: 50%;
+  text-decoration: none;
 
   .plus-icon {
     color: $green;
