--- a/frontend/src/pages/Tracker/tracker.scss
+++ b/frontend/src/pages/Tracker/tracker.scss
@@ -22,6 +22,14 @@
   text-align: center;
   padding: 64px;
 }
+.no-guests {
+  margin: 60px auto;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 500;
+  text-align: center;
+  color: $green;
+}
 .guestAttendance {
   width: 100%;
   margin: 0 auto !important;
