--- a/frontend/src/style/_variables.scss
+++ b/frontend/src/style/_variables.scss
@@ -8,7 +8,7 @@ $green: #23c55e;
 $lightGreen: #bbedcd;
 $white: #ffffff;
 $error: #f45156;
-$veryLightRed: #f4515610;
+$veryLightRed: #ff848810;
 $fountainWhite: #e8e8ea;
 $smoke: #b7b9bd;
 $blue: #454a54;
@@ -16,4 +16,4 @@ $light-gray: #e9f9ef;
 
 //measurements
 $desktopHeight: 800px;
-$mobiletopHeight:600px
+$mobiletopHeight: 600px;
