fix: add event description field

--- a/frontend/src/pages/Events/components/CreateEventForm/create-event-form.scss
+++ b/frontend/src/pages/Events/components/CreateEventForm/create-event-form.scss
@@ -11,7 +11,7 @@
       display: flex;
       gap: 24px;
     }
-    .location-container {
+    .description-container {
       grid-row: span 2;
 
       div {
