--- a/frontend/src/style/_variables.scss
+++ b/frontend/src/style/_variables.scss
@@ -17,3 +17,10 @@ $light-gray: #e9f9ef;
 //measurements
 $desktopHeight: 800px;
 $mobiletopHeight: 600px;
+$screen-sm: 426px;
+
+@mixin sm {
+  @media (max-width: #{$screen-sm}) {
+    @content;
+  }
+}
