--- a/frontend/src/ui/Button/button.scss
+++ b/frontend/src/ui/Button/button.scss
@@ -18,6 +18,10 @@
   .pending {
     opacity: 0;
   }
+
+  @include sm {
+    font-size: 1rem;
+  }
 }
 
 .secondary {
@@ -44,17 +48,15 @@
   padding: 24px 40px;
 }
 
-
-@media (max-width:426px) {
-  .button{
+@media (max-width: 426px) {
+  .button {
     font-size: 1rem;
-
   }
 
-  .button-sm{
+  .button-sm {
     padding: 10px 20px;
   }
-  .button-md{
+  .button-md {
     padding: 15px 20px;
   }
 }
