--- a/frontend/src/pages/Events/components/CreateEventButton/create-event-button.scss
+++ b/frontend/src/pages/Events/components/CreateEventButton/create-event-button.scss
@@ -13,6 +13,12 @@
   border-radius: 50%;
   text-decoration: none;
 
+  @include sm {
+    width: 100%;
+    max-width: 100px;
+    gap: 0;
+  }
+
   .plus-icon {
     color: $green;
   }
@@ -24,5 +30,9 @@
     font-weight: 500;
     text-align: center;
     color: $green;
+
+    @include sm {
+      font-size: 10px;
+    }
   }
 }
