--- a/frontend/src/pages/Events/components/CreateEventForm/create-event-form.scss
+++ b/frontend/src/pages/Events/components/CreateEventForm/create-event-form.scss
@@ -28,6 +28,11 @@
         color: rgba($dark, 0.5);
       }
     }
+    @include sm {
+      display: flex !important;
+      flex-direction: column;
+      gap: 16px;
+    }
   }
 
   .gift-header {
@@ -36,6 +41,10 @@
     font-weight: 600;
     margin-top: 60px;
     margin-bottom: 24px;
+
+    @include sm {
+      font-size: 1.5rem;
+    }
   }
   .add-gift-container {
     position: relative;
