--- a/frontend/src/shared-components/EventCard/event-card.scss
+++ b/frontend/src/shared-components/EventCard/event-card.scss
@@ -9,6 +9,11 @@
   border-radius: 50%;
   text-decoration: none;
 
+  @include sm {
+    width: 100%;
+    max-width: 100px;
+  }
+
   .image-container {
     position: absolute;
     width: 100%;
@@ -36,6 +41,10 @@
       font-size: 16px;
       font-weight: 500;
       color: white;
+
+      @include sm {
+        font-size: 10px;
+      }
     }
   }
 }
