--- a/frontend/src/pages/Events/components/CreateEventForm/create-event-form.scss
+++ b/frontend/src/pages/Events/components/CreateEventForm/create-event-form.scss
@@ -59,6 +59,10 @@
       transform: translateY(-50%);
       cursor: pointer;
     }
+
+    @include sm {
+      width: 100%;
+    }
   }
 
   .gifts-list {
@@ -66,6 +70,7 @@
     align-items: center;
     gap: 24px;
     margin-top: 16px;
+    flex-wrap: wrap;
 
     .gift {
       display: flex;
@@ -74,6 +79,7 @@
       border: 1px solid $smoke;
       border-radius: 12px;
       padding: 14px 20px;
+      flex-shrink: 0;
 
       span {
         font-family: "Montserrat";
@@ -87,11 +93,19 @@
         cursor: pointer;
       }
     }
+
+    @include sm {
+      gap: 16px;
+    }
   }
 
   .button-container {
     margin-top: 48px;
     margin-inline: auto;
     width: 40%;
+
+    @include sm {
+      width: 100% !important;
+    }
   }
 }
