--- a/frontend/src/ui/Header/header.scss
+++ b/frontend/src/ui/Header/header.scss
@@ -68,6 +68,17 @@
       font-weight: 500;
       width: 60px;
     }
+    .bell-container{
+      width: 35px;
+      .icon{
+        width: 18px;
+      }
+    }
+
+    .profile-image{
+      width: 35px;
+      font-size: 15px;
+    }
   }
  
 }  
