--- a/frontend/src/pages/Login/login.scss
+++ b/frontend/src/pages/Login/login.scss
@@ -16,7 +16,9 @@
       height: 100%;
       background-color: $green;
       border-radius: 0px 80px 80px 0px;
-
+      img{
+        display: none;
+      }
       p {
         color: $gray;
         font-family: "Montserrat", sans-serif;
@@ -24,6 +26,7 @@
         font-weight: 500;
         margin-top: 12px;
         margin-left: 26px;
+       
       }
     }
     .img-container {
