--- a/frontend/src/pages/Login/login.scss
+++ b/frontend/src/pages/Login/login.scss
@@ -41,7 +41,7 @@
   }
 
   & > div:last-child {
-    padding: 4rem;
+    padding: 3rem 16px;
     display: flex;
     flex-direction: column;
     justify-content: center;
