--- a/frontend/src/pages/Home/components/CustomerRevs/reviews.scss
+++ b/frontend/src/pages/Home/components/CustomerRevs/reviews.scss
@@ -20,6 +20,7 @@
 .reviews{
     padding: 20px;
     width: 600px !important;
+    height: 350px;
     display: flex !important;
     flex-direction: column;
     align-items: center;
